View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027713 | Open CASCADE | OCCT:Foundation Classes | public | 2016-07-26 16:45 | 2016-12-09 16:38 |
Reporter | ifv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027713: Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329) | ||||
Description | After restoring FPS in frame of issue 0026329 (branch CR26329) test bugs fclasses bug6143,which is dedicated to check treatment of FPS is not OK on Linux. | ||||
Steps To Reproduce | Switch to branch CR26329 and run test "bugs fclasses bug6143" on Linux platform | ||||
Tags | No tags attached. | ||||
Test case number | bugs fclasses bug6143 | ||||
|
Branch CR27713 has been created by abv. SHA-1: bab093fe49f66eba1923cb0b8392f48e85d4f0bb Detailed log of new commits: Author: abv Date: Mon Aug 29 06:22:44 2016 +0300 0027713: Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329) |
|
Branch CR27713 has been updated forcibly by abv. SHA-1: e266dc22fcfff2c158d28497b37cc3efd8ce420f |
|
Branch CR27713 has been updated forcibly by abv. SHA-1: 377e20911172dad0d1bd47b23b90a00ff669aaba |
|
Fix pushed to CR27713, please review |
|
Please test the patch. |
|
Dear BugMaster, Branch CR27713 from occt git-repository (and CR26329prod from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 377e20911172dad0d1bd47b23b90a00ff669aaba SHA-1: c9a1a028f34d1aee33a9d8f47ed4ff23fd3b4c3d Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1140 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27713-master-OCCT/Debian70-64/bugs/fclasses/bug6143.html http://occt-tests/CR27713-master-OCCT/Windows-64-VC10/bugs/fclasses/bug6143.html bugs fclasses bug6143: OK Testing on Linux: occt component : Total MEMORY difference: 89448664 / 89919480 [-0.52%] Total CPU difference: 19443.279999999864 / 19309.239999999936 [+0.69%] products component : Total MEMORY difference: 30051832 / 30026483 [+0.08%] Total CPU difference: 5100.49999999996 / 5045.099999999974 [+1.10%] Testing on Windows: occt component : Total MEMORY difference: 57101410 / 57107084 [-0.01%] Total CPU difference: 18238.076909998763 / 18053.73052829886 [+1.02%] products component : Total MEMORY difference: 21259081 / 21223623 [+0.17%] Total CPU difference: 4927.884388799951 / 4857.465537399941 [+1.45%] There are following differences in images found by testdiff. http://occt-tests/CR27713-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27713-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE boolean volumemaker A3: A3.png differs - (inheritance of 0026329) IMAGE offset with_intersect_20 J9: J9.png differs - (inheritance of 0026329) http://occt-tests/CR27713-master-Products/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27713-master-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE emesh bugs bug26326_1: bug26326_1.png differs - (inheritance of 0026329) |
|
Waiting results of 0026329 |
|
Branch CR27713_1 has been created by abv. SHA-1: 057663b5cdd74c27fa87eb37595099ff651ca036 Detailed log of new commits: Author: abv Date: Mon Aug 29 06:22:44 2016 +0300 0027713: Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329) Use standard (POSIX-compliant) macro "__linux__" for identification of Linux system, instead of obsolete "linux" |
|
Branch CR27713_1 has been updated forcibly by mkv. SHA-1: e6d64b5650fd6cfcb06e7c64b6a470ea0ead2151 |
|
Dear BugMaster, Branch CR27713_1 was rebased on IR-2016-09-22 of occt git-repository. Branch CR26329prod was rebased on IR-2016-09-22 of products git-repository. |
|
Dear BugMaster, Branch CR27713_1 from occt git-repository (and master from CR26329prod git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e6d64b5650fd6cfcb06e7c64b6a470ea0ead2151 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1161 Regressions/Differences/Improvements: http://occt-tests/CR27713_1-CR26329prod-OCCT/Debian70-64/bugs/modalg_6/bug27842.html http://occt-tests/CR27713_1-CR26329prod-OCCT/Windows-64-VC10/bugs/modalg_6/bug27842.html bugs modalg_6 bug27842: IMPROVEMENT Testing cases: http://occt-tests/CR27713_1-CR26329prod-OCCT/Debian70-64/bugs/fclasses/bug6143.html http://occt-tests/CR27713_1-CR26329prod-OCCT/Windows-64-VC10/bugs/fclasses/bug6143.html bugs fclasses bug6143: OK Testing on Linux: occt component : Total MEMORY difference: 90657631 / 90241808 [+0.46%] Total CPU difference: 19441.66999999988 / 19251.579999999874 [+0.99%] products component : Total MEMORY difference: 30032989 / 30057668 [-0.08%] Total CPU difference: 5142.449999999978 / 5152.399999999975 [-0.19%] Testing on Windows: occt component : http://occt-tests/CR27713-master-OCCT/Windows-64-VC10-cpu/diff-Windows-64-VC10-cpu.html CPU offset with_intersect_20 J9: 11.2944724 / 1.3572087 [+732.18%] - regression, see new issue 0027892 CPU offset with_intersect_80 K8: 14.9448958 / 3.2292207 [+362.80%] - OK CPU offset with_intersect_80 J9: 39.3746524 / 2.340015 [+1582.67%] - OK Total MEMORY difference: 57226539 / 57221799 [+0.01%] Total CPU difference: 18095.569996498638 / 18310.88257669872 [-1.18%] products component : Total MEMORY difference: 21274041 / 21235672 [+0.18%] Total CPU difference: 4963.702218399951 / 4988.631178199945 [-0.50%] There are following differences in images found by testdiff. http://occt-tests/CR27713_1-CR26329prod-Products/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27713_1-CR26329prod-Products/Windows-64-VC10/diff-Windows-64-VC10-image.html IMAGE emesh bugs bug26326_1: bug26326_1.png differs - validated by developer |
|
Dear abv, Branch CR27713_1 has been rejected due to: - regressions/differences/improvements - CPU problems - differences in images Validation waiting. |
|
Everything looks OK, please remove TODO from script bugs modalg_6 bug27842 (I wonder how it was integrated there?) and consider this issue as tested, along with 0026329 |
|
Branch CR27713_1 has been updated by mkv. SHA-1: 0f3fb6764e99ad050acbd0630f0f55b37faaa9b3 Detailed log of new commits: Author: mkv Date: Fri Sep 23 18:36:41 2016 +0300 Small correction of test case for issue CR27713 |
|
Dear BugMaster, Branch CR27713_1 is TESTED. |
|
Dear BugMaster, Branch CR27713_1 has product part - branch CR26329prod. |
|
Branch CR27713_1 has been updated by mkv. SHA-1: d135a8010f097771f12ec67f45a15362c1780eb8 Detailed log of new commits: Author: mkv Date: Fri Sep 23 19:22:37 2016 +0300 Small correction of test case for issue CR27713 |
|
Branch CR27713_1 has been updated by kgv. SHA-1: 94abc66a2936c30292bd5c479e006f871c0f2c89 Detailed log of new commits: Author: kgv Date: Fri Sep 30 10:35:52 2016 +0300 fix msvc14 compiler warnings introduced by 0026329 |
|
Branch CR27713_1 has been deleted by kgv. SHA-1: 94abc66a2936c30292bd5c479e006f871c0f2c89 |
|
Branch CR27713 has been deleted by kgv. SHA-1: 377e20911172dad0d1bd47b23b90a00ff669aaba |
occt: master c381fda2 2016-08-29 03:22:44 Committer: kgv Details Diff |
0027713: Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329) Use standard (POSIX-compliant) macro "__linux__" for identification of Linux system, instead of obsolete "linux" |
Affected Issues 0027713 |
|
mod - src/OSD/OSD_Chronometer.cxx | Diff File | ||
mod - src/OSD/OSD_signal.cxx | Diff File | ||
mod - src/QABugs/QABugs_11.cxx | Diff File | ||
mod - src/Standard/Standard_MMgrOpt.cxx | Diff File | ||
mod - tests/bugs/fclasses/bug6143 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-07-26 16:45 | ifv | New Issue | |
2016-07-26 16:45 | ifv | Assigned To | => abv |
2016-07-26 16:46 | ifv | Relationship added | child of 0026329 |
2016-07-26 16:47 | ifv | Assigned To | abv => ifv |
2016-07-26 16:47 | ifv | Assigned To | ifv => msv |
2016-07-26 16:54 | msv | Summary | Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (0026329) => Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329) |
2016-07-26 16:54 | msv | Description Updated | |
2016-07-26 16:54 | msv | Steps to Reproduce Updated | |
2016-07-26 16:55 | msv | Assigned To | msv => abv |
2016-08-29 06:23 | git | Note Added: 0057238 | |
2016-08-29 07:26 | git | Note Added: 0057239 | |
2016-08-29 08:28 | git | Note Added: 0057240 | |
2016-08-29 08:28 | abv | Note Added: 0057241 | |
2016-08-29 08:28 | abv | Assigned To | abv => kgv |
2016-08-29 08:28 | abv | Status | new => resolved |
2016-08-29 09:32 | kgv | Note Added: 0057243 | |
2016-08-29 09:32 | kgv | Assigned To | kgv => bugmaster |
2016-08-29 09:32 | kgv | Status | resolved => reviewed |
2016-08-29 12:28 |
|
Assigned To | bugmaster => mkv |
2016-08-31 14:50 |
|
Note Added: 0057342 | |
2016-08-31 14:50 |
|
Note Added: 0057343 | |
2016-08-31 14:53 |
|
Test case number | => bugs fclasses bug6143 |
2016-09-22 06:44 | git | Note Added: 0058004 | |
2016-09-22 17:31 | git | Note Added: 0058037 | |
2016-09-23 16:15 |
|
Note Added: 0058089 | |
2016-09-23 16:16 |
|
Note Added: 0058091 | |
2016-09-23 16:17 |
|
Note Added: 0058092 | |
2016-09-23 16:17 |
|
Assigned To | mkv => abv |
2016-09-23 16:17 |
|
Status | reviewed => feedback |
2016-09-23 17:11 | abv | Note Added: 0058096 | |
2016-09-23 17:14 | abv | Assigned To | abv => mkv |
2016-09-23 18:38 | git | Note Added: 0058104 | |
2016-09-23 18:39 |
|
Note Added: 0058105 | |
2016-09-23 18:39 |
|
Assigned To | mkv => bugmaster |
2016-09-23 18:39 |
|
Status | feedback => tested |
2016-09-23 18:42 |
|
Note Added: 0058106 | |
2016-09-23 19:22 | git | Note Added: 0058108 | |
2016-09-30 10:41 | git | Note Added: 0058330 | |
2016-10-03 13:47 | kgv | Changeset attached | => occt master c381fda2 |
2016-10-03 13:47 | kgv | Assigned To | bugmaster => kgv |
2016-10-03 13:47 | kgv | Status | tested => verified |
2016-10-03 13:47 | kgv | Resolution | open => fixed |
2016-10-28 21:41 | git | Note Added: 0059447 | |
2016-10-28 21:48 | git | Note Added: 0059557 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |