0027713: Test bugs fclasses bug6143 is not OK for Linux after restoring FPS (26329)

Use standard (POSIX-compliant) macro "__linux__" for identification of Linux system, instead of obsolete "linux"